--- a/CSS/addEvent.css
+++ b/CSS/addEvent.css
@@ -1,55 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
-@import url('a_modal.css');
+
 
 *
 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
-img{
-  width: 200px;
-  height: 200px;
-} 
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
   }
   
-    .text-primary {
-      color: #666666;
-    }
-    
-    .text-blue {
-      color: #032d89;
-    }
-    
-    .text-red {
-      color: #cc3c43;
-    }
-    
-    .text-green {
-      color: #367952;
-    }
-    
-    .text-orange {
-      color: #f5b74f;
-    }
   
-  .font-weight-bold {
-    font-weight: 600;
-  }
+  body{
+    display: block;
+}
+.sidenav{
+  color: black;
+  font-size: 14px;
   
-  .grid-container {
-    display: grid;
-    grid-template-columns: 260px 1fr 1fr 1fr;
-    grid-template-rows: 0.2fr 3fr;
-    grid-template-areas:
-      "sidebar header header header"
-      "sidebar main main main";
-    height: 100vh;
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
   }
+}
+
   
   
   /* ---------- HEADER ---------- */
@@ -69,128 +49,15 @@ img{
     display: none;
   }
   
-  
- /* ---------- SIDEBAR ---------- */
-  
- #sidebar {
-  grid-area: sidebar;
-  height: 100%;
-  background-color: #032d89;
-  color: white;
-  overflow-y: auto;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-}
+ 
 
-.sidebar-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 15px 0px 25px;
-  margin-bottom: 30px;
-}
-
-.sidebar-title > span {
-  display: none;
-}
-
-.sidebar-brand {
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.sidebar-list {
-  padding: 0;
-  margin-top: 15px;
-  list-style-type: none;
-}
-
-.sidebar-list-item {
-  padding: 20px 15px 20px 20px;
-}
-
-.sidebar-list-item:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  cursor: pointer;
-}
-
-.sidebar-list > a {
-  text-decoration: none;
-  color: white;
-}
-#sidebar ul ul li {    
-list-style: none;
-padding: 10px 20px 10px 10px;
-display: none;
-}
-.dropdown-container{
-color: #e6e8ed;
-padding-top: 10px;
-margin-top: 20px;
-}
-.dropdown-container .con-lic, .dropdown-container .con-mv{
-padding: 20px 15px 0px 20px;
-margin-top: -20px;
-}
-.dropdown-container a{
-  text-decoration: none;
-  color: white;
-}
-.sidebar-list-item1 button{
-  padding: 20px 15px 20px 20px;
-  text-decoration: none;
-  font-size: 16px;
-  color: white;
-  display: block;
-  border: none;
-  background: none;
-  width:100%;
-  text-align: left;
-  cursor: default;
-  outline: none;
-}
-
-/* On mouse-over */
-.dropdown-btn:hover {
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-lic:hover{
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-mv:hover {
-background-color: rgba(255, 255, 255, 0.2); 
-}
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
 font-size: 20px; /* Increased text to enable scrolling */
 /* padding: 0px 10px; */
 }
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-display: none;
-padding-left: 8px;
-}
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-  /* float: left; */
-  /* padding-right: 8px; */
-}
 
-  .sidebar-responsive {
-    display: inline !important;
-    position: absolute;
-    /*
-      the z-index of the ApexCharts is 11
-      we want the z-index of the sidebar higher so that
-      the charts are not showing over the sidebar 
-      on small screens
-    */
-    z-index: 12 !important;
-  }
-  
-  
   /* ---------- MAIN ---------- */
   
   .main-container {
@@ -198,12 +65,40 @@ padding-left: 8px;
     overflow-y: auto;
     padding: 20px 20px;
   }
-  
-  .main-title {
-    display: flex;
-    justify-content: space-between;
+  .h2, h2 {
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: bolder;
+    color: #1D5D9B;
+  }
+  #dash-logo{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 35px;
+    font-weight: bolder;
+    color: #1D5D9B;  
+}
+  h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: bolder;
+    color: #1D5D9B;
+}
+  .container-fluid{
+    border-radius: 2%;
+    border-color: black;
+     box-shadow: 0 2px 5px #fff(0, 0, 0, 0.1);
+     
+  } 
+  .col-sm-9{
+    background-color: white;
+    height: 100%;
+    position: fixed;
+    overflow-x: hidden;
+    padding-top: 20px;
   }
   
+ 
   .main-title > p {
     font-size: 20px;
   }
@@ -239,12 +134,13 @@ th, tr, td{
     text-transform: uppercase;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: rgb(39, 88, 147); 
+    background-color: #1D5D9B; 
     color: white;
     cursor: pointer;
 }
 tr th, tr th{
     background-color: gainsboro;
+   
 }
 .table tr:not(:first-child){
     cursor: pointer;
@@ -259,7 +155,7 @@ h4{
   cursor: pointer;
 }
 .selected-row{
-  background-color: rgb(19, 42, 172) !important;
+  background-color: #1D5D9B !important;
   color: white;
 }
 #srchText{
@@ -276,6 +172,15 @@ h4{
   text-transform: uppercase;
   /* margin-bottom: 10px; */
 }
+.invalid-input {
+  border: 3px solid red;
+}
+
+.valid-input {
+  border: 3px solid green;
+}
+
+
 .btn1 button{
   padding: 4px;
   padding: 10px;
@@ -295,8 +200,9 @@ h4{
   user-select: none;
 }
   /* Medium <= 992px */
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 1000px) {
     .grid-container {
+
       grid-template-columns: 1fr;
       grid-template-rows: 0.2fr 3fr;
       grid-template-areas:
@@ -360,3 +266,393 @@ h4{
 }
 
 
+/* popup modal for create account */
+.reg-container{
+  background-color: #1D5D9B;
+  width: 500px;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  border-radius: 10px;
+  display: none;
+
+}
+.container-modal{
+  background-color: #1D5D9B;
+}
+#email{
+  text-align: start;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  color: black;
+}
+textarea {
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 100px; /* Set the height as needed */
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+
+
+input {
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 14px;
+  
+}
+#input{
+  display: block;
+ 
+}
+#btnRegister{
+  width: 100px;
+  height: 30px;
+  display: block;
+  margin: 10px auto; 
+  padding: 5px 10px;
+  background-color: #F4D160;
+  color: #000000;
+  border: 5px;
+  border-radius: 15px;
+  font-size: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
+  margin-top: 30px;
+}
+#create-txt{
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+  color: white;
+  
+}
+label{
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+}
+.close-modal{
+  position: absolute;
+  top: 2%;
+  right: 3%;
+  font-size: 18px;
+  z-index: 1;
+  cursor: pointer;
+  color: #F4D160;
+}
+/* popup modal for edit account */
+.edit-container{
+  background-color: #1D5D9B;
+  width: 500px;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  border-radius: 10px;
+  display: none;
+
+}
+.container-modal-edit{
+  background-color: #1D5D9B;
+}
+#email1{
+  text-align: start;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  color: black;
+}
+textarea {
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 100px; /* Set the height as needed */
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+#password{
+  font-size: 12px;
+  box-sizing: 35px;
+  size: 35px;
+  height: 150px;
+}
+
+
+input {
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 14px;
+  
+}
+
+#input{
+  display: block;
+ 
+}
+#btnEdit{
+  width: 100px;
+  height: 30px;
+  display: block;
+  margin: 10px auto; 
+  padding: 5px 10px;
+  background-color: #F4D160;
+  color: #000000;
+  border: 5px;
+  border-radius: 15px;
+  font-size: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
+  margin-top: 30px;
+}
+#edit-txt{
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+  color: white;
+  
+}
+label{
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+}
+.close-modal-edit{
+  position: absolute;
+  top: 2%;
+  right: 3%;
+  font-size: 18px;
+  z-index: 1;
+  cursor: pointer;
+  color: #F4D160;
+}
+
+/* EDIT MODAL */
+.modal-edit{
+  background-color: white;
+  user-select: none;
+  border: 1px solid #b3b3b3;
+  box-shadow: 5px 5px 5px rgb(70, 69, 69);
+  color: black;
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  border-radius: 10px;
+  display: none;
+}
+.close-modal-edit{
+  position: absolute;
+  top: 2%;
+  right: 3%;
+  font-size: 18px;
+  z-index: 1;
+  cursor: pointer;
+}
+.modal-content-edit{
+  position: relative;
+  display: flex;   
+}
+.edit-info{
+  display: block;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.edit{
+  font-weight: bold;
+  width: 170px;
+}
+.modal-form-edit{
+  margin-left: 20px;
+}
+.modal-input-edit{
+  width: 280px;
+  padding: 0 5px 0 5px;
+  height: 30px;
+  font-size: 14px;
+  background: none;
+  outline: none;
+  text-transform: uppercase;
+  border-radius: 5px;  
+}
+.modal-input-edit-pass{
+  width: 280px;
+  padding: 0 5px 0 5px;
+  height: 30px;
+  font-size: 14px;
+  background: none;
+  outline: none;
+  border-radius: 5px;  
+}
+.modal-input-edit-btn{
+  height: 40px;
+  width: 70%;
+  border: 1px solid;
+  background-color: var(--blueButton);
+  font-size: 18px;
+  color: white;
+  font-weight: 700;
+  margin: 20px 0 0 80px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px; 
+  margin-bottom: 5px;
+  margin-top: 20px;
+  align-items: center;
+}
+.modal-input-edit-btn:hover{
+  background-color: rgb(48, 83, 211);
+  transition: all 0.4s ease-out;
+}
+.modal-input::placeholder{
+  color: var(--lightgray);
+}
+.edit-info p{
+  font-size: 11px;
+  color: var(--errorColor);
+  display: none;
+}
+.edit-info.error input{
+  position: relative;
+  border: 1px solid var(--errorColor);
+  border-radius: 2px;
+}
+.edit-info.valid input{
+  position: relative;
+  border: 1px solid var(--validColor);
+  border-radius: 2px;
+}
+.edit-info.error p{
+  display: block;
+}
+/* .modal#edit-modal.active{
+  filter: blur(10px);
+  user-select: none;
+} */
+
+
+#delete_acc_modal{
+  width: 550px;
+  /* height: 200px; */
+  background-color: white;
+  user-select: none;
+  border: 1px solid #b3b3b3;
+  box-shadow: 5px 5px 5px rgb(70, 69, 69);
+  color: black;
+  padding: 20px;
+   visibility: hidden; 
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+}
+.cnfrm_modal{
+  width: 550px;
+  /* height: 200px; */
+  background-color: white;
+  user-select: none;
+  border: 1px solid #b3b3b3;
+  box-shadow: 5px 5px 5px rgb(70, 69, 69);
+  color: black;
+  padding: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  display: none;
+}
+.cnfrm_modal_add{
+  width: 550px;
+  /* height: 200px; */
+  background-color: white;
+  user-select: none;
+  border: 1px solid #b3b3b3;
+  box-shadow: 5px 5px 5px rgb(70, 69, 69);
+  color: black;
+  padding: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  display: none;
+}
+#cnfrm_add{
+  width: 550px;
+  /* height: 200px; */
+  background-color: white;
+  user-select: none;
+  border: 1px solid #b3b3b3;
+  box-shadow: 5px 5px 5px rgb(70, 69, 69);
+  color: black;
+  padding: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.4s, top 0.4s;
+  display: none;
+}
+.cnfrm_modal h1, #delete_acc_modal h1{
+  letter-spacing: 3px;
+  text-align: center;
+}
+#cnl2{
+  margin-left: 300px;
+}
+.cnl{
+  margin-left: 300px;
+}
+#cnl3{
+  margin-left: 300px;
+}
+
+.btn button{
+	padding: 4px;
+	width: 100px; 
+  outline: none;
+	padding: 10px;
+  margin: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  margin-top: 20px;
+  cursor: pointer;
+  background-color: var(--blueButton);
+  color:white;
+}
+.btn{
+    display: flex;
+}
